@@ -1,4 +1,4 @@
-package org.meandre.webservices.servlets;
+package org.meandre.webservices.deprecated.servlets;
 
 import java.io.IOException;
 import java.net.URL;
@@ -19,7 +19,7 @@ import org.meandre.core.security.SecurityManager;
 import org.meandre.core.security.SecurityStoreException;
 import org.meandre.core.security.User;
 import org.meandre.core.store.Store;
-import org.meandre.webservices.controllers.WSExecuteLogic;
+import org.meandre.webservices.deprecated.controller.WSExecuteLogic;
 import org.meandre.webservices.logger.WSLoggerFactory;
 import org.meandre.webui.WebUIException;
 
