@@ -6,12 +6,12 @@ package org.meandre.webservices.servlets;
 import org.meandre.configuration.CoreConfiguration;
 import org.meandre.core.store.Store;
 
-/** Provides the servlet that serves About requests.
+/** Provides the servlet that serves Execute requests.
  * 
  * @author Xavier Llor&agrave;
  *
  */
-public class WSAboutServlet extends MeandreBaseServlet {
+public class WSExecuteServlet extends MeandreBaseServlet {
 
 	/** A default serial ID */
 	private static final long serialVersionUID = 1L;
@@ -21,7 +21,7 @@ public class WSAboutServlet extends MeandreBaseServlet {
 	 * @param store The Meandre store to use
 	 * @param cnf The Meandre configuration to use
 	 */
-	public WSAboutServlet(Store store, CoreConfiguration cnf) {
+	public WSExecuteServlet(Store store, CoreConfiguration cnf) {
 		super(store, cnf);
 	}
 
