@@ -74,7 +74,13 @@ def errorBadRequest ( response ):
     
        errorBadRequest ( response )'''
     response.sendError(HttpServletResponse.SC_BAD_REQUEST)   
-#
+
+def errorExpectationFail ( response ):
+    '''Responses with a expectation fail code
+    
+       errorExpectationFail ( response )'''
+    response.sendError(HttpServletResponse.SC_EXPECTATION_FAILED)   
+
 #
 # Content response function
 #
